apps/back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-platform-api-deployment
  namespace: develop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green-platform-api
  template:
    metadata:
      labels:
        app: green-platform-api
    spec:
      containers:
      - name: green-platform-api
        image: mrcycler/green-platform-api:1.1.0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerhubsecret-green
