apps/back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-platform-api-service
  namespace: develop
spec:
  selector:
    app: green-platform-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
