apps/back/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-platform-api-ingress
  namespace: develop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 172.203.105.248
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: green-platform-api-service
            port:
              number: 80
